test/positive/feature_array.java

public class feature_array {
  public feature_array() {}
  protected int[] x;
}

